scalalib/src/test/resource/acyclic/src/test/resources/success/cyclicunmarked/B.scala
package success.cyclicunmarked

class B {
  val a1: A = new A
  val a2: A = new A
}
