scalalib/src/test/resource/acyclic/src/test/resources/fail/cyclicgraph/A.scala
package fail.cyclicgraph
import acyclic.file

class A{
  val e = new E
}
